# monitour

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  HANDOFF.md  README.md  packages.config  vcpkg.json
cmake/: copy_if_exists.cmake
models/: README.md
shaders/: Nv12ToTensor.hlsl
src/: main.cpp
src/calibration/: PassiveCalibrator.cpp  PassiveCalibrator.h
src/capture/: FrameSlot.cpp  FrameSlot.h  MfCaptureSession.cpp  MfCaptureSession.h
src/d3d/: D3DContext.cpp  D3DContext.h  Nv12ToTensor.cpp  Nv12ToTensor.h
src/focus/: ForegroundSetter.cpp  ForegroundSetter.h  MonitorLayout.cpp  MonitorLayout.h  MonitorMru.cpp  MonitorMru.h  WindowEnumerator.cpp  WindowEnumerator.h
src/inference/: DeviceFactory.cpp  DeviceFactory.h  FaceDetector.cpp  FaceDetector.h  HeadPose.h  HeadPoseModel.cpp  HeadPoseModel.h
src/input/: ActivityHooks.cpp  ActivityHooks.h
src/overlay/: DebugOverlay.cpp  DebugOverlay.h  FocusGlow.cpp  FocusGlow.h
src/tray/: Settings.cpp  Settings.h  TrayIcon.cpp  TrayIcon.h
src/util/: ComUtil.h  Logging.cpp  Logging.h  ScopedMmcss.cpp  ScopedMmcss.h
tests/: CMakeLists.txt  PassiveCalibrator_tests.cpp
tools/: onnx_export.py
tools/olive/: olive_fp16.json  olive_int8.json
